# ezpsy

./: .npmignore  Cargo.toml  README.md  README_0.md  index.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.types.json
docx/: Target.md
example/: Remember.html  animate.html  ezpsy.html  function.html  image.html  index.html  randomDot.html  rect.html  singrat.html  stroop.html  test.html  testGrat.html  testGrat_js.html  testGrat_wasm.html  testKey.html  test_css.html  test_css.js  test_wasm.html  testindex.html  text.html  time.html  time1.html  wasmParallel.html
example/bit-steal/: bitsteal0.html  bitsteal1.html  bitsteal112.html  bitsteal124.html  bitstealnoise.html  origin.html
example/bit-steal-1/: gabor.html
example/bit-steal-2/: js.html  js2.html  js3.html  sys.js  wasm.html  wasm2.html  wasm3.html
example/bit-steal-test/: js.html  wasm.html
example/function/: func.html  func.js
example/moduleTest/: app.js  eyeChart.js  index.html  n-back.js  remember.js  simpleReaction.js  stroop.js
example/test/: singrat.html  singrat_js.html  singrat_new_wasm.html  singrat_wasm.html
img/: OIP.jfif
lib/: lib.rs
src/: Element.ts  Functions.ts  Storage.ts  ezpsy.ts  index.ts  initWasm.ts  setWasm.ts  setWasm2.ts  setWasm_old.ts  utils.ts
src/Animate/: animate.ts
src/Canvas/: canvas.ts
src/DataType/: dataType.ts
src/Dialogue/: dialogue.scss  dialogue.ts  dialogue0.ts
src/Div/: div.ts
src/Gradient/: gradient.ts
src/Graphic/: arc.ts  circle.ts  image.ts  (+17 more)
static/: singrat_bg.wasm  singrat_bg_0.wasm  singrat_opt_bg.wasm
(+8 files in other folders)
